# AutoIntent-experiments

./: .gitattributes  .gitignore  README.md  aggregate_seed_results.py  autointent_heavy_backbone_final_metrics.ipynb  automl_frameworks.py  before_after.ipynb  clinc_analysis.py  compute.ipynb  correlation_analysis.py  encoders.ipynb  framework_comparison.md  frameworks_comparison.ipynb  frameworks_duration.py  lama.py  lama_dur.py  multi-label.ipynb  paper_draft.md  paper_draft.tex  prune_final_configs.py  prune_final_configs_for_presets.py  pyproject.toml  quality_ho.py  quality_ho_cv.py  quality_presets.py  quality_scorers.py  quality_separation.py  scorers.ipynb  scoring_results_stats.py  scoring_results_to_csv.py  show_res.ipynb  sweep.py  testbed.ipynb  tune_bert.py  wandb_load_aug_exp.py  wandb_load_final_scorers.py  wandb_load_oos.py  wandb_load_scorers.py  wandb_loading.py
experiments/caching-efficiency/: .gitignore  DESIGN.md  README.md  REPORT.md  make_plots.py  pyproject.toml  run_all.py
experiments/caching-efficiency/cache_bench/: __init__.py  harness.py  models.py
experiments/caching-efficiency/cache_bench/scenarios/: __init__.py  concurrency.py  embeddings.py  structured.py
experiments/caching-efficiency/results/: concurrency.csv  concurrency.json  embed_get_hash.csv  embed_get_hash.json  embed_keying.csv  embed_keying.json  embed_perf.csv  embed_perf.json  embed_reuse.csv  embed_reuse.json  embed_storage.csv  embed_storage.json  struct_collision.csv  struct_collision.json  struct_ops.csv  struct_ops.json  struct_preload.csv  struct_preload.json  struct_storage.csv  struct_storage.json
experiments/mcp-exps/: README.md  basic-agent.py  case_chats.py  offline_eval.py  pyproject.toml  report.py  run_exp.py  samples.py  smoke_basic_agent.py
experiments/mcp-exps/.mcp_evals_state/: basic-fs-deepseek-v-3-2.jsonl
experiments/mcp-exps/exported_repos/: _basic-fs-redo-deepseekv32_test_0.jsonl  basic-fs-deepseek-v-3-2_test_0.jsonl  basic-fs-gpt-5-4-mini_test_0.jsonl  basic-fs-gpt-5-4-nano_test_0.jsonl  basic-fs-gpt-5-4-true_test_0.jsonl  basic-fs-haiku-v2_test_0.jsonl  basic-fs-opus-4-6_true_test_0.jsonl  basic-fs-qwen3-coder-plus-v2_test_0.jsonl  basic-fs-redo-gpt54_test_0.jsonl  basic-fs-redo-gpt54mini_test_0.jsonl  basic-fs-redo-gpt54nano_test_0.jsonl  basic-fs-redo-haiku45_test_0.jsonl  basic-fs-redo-opus46_test_0.jsonl  basic-fs-redo-qwen3coder_test_0.jsonl  basic-pg-anthropic__claude-haiku-4_5_test_0.jsonl  basic-pg-deepseek__deepseek-v3_2_test_0.jsonl  basic-pg-google__gemini-3-flash-preview_test_0.jsonl  basic-pg-google__gemini-3_1-pro-preview_test_0.jsonl  basic-pg-openai__gpt-5_4-mini_test_0.jsonl  basic-pg-openai__gpt-5_4-nano_test_0.jsonl  basic-pg-openai__gpt-5_4_test_0.jsonl  basic-pg-qwen__qwen3-coder-plus_test_0.jsonl  ts-pg-anthropic__claude-haiku-4_5-ts_train_0_.jsonl  ts-pg-deepseek__deepseek-v3_2-ts_train_0_.jsonl  ts-pg-google__gemini-3-flash-preview-ts_train_0_.jsonl  ts-pg-google__gemini-3_1-pro-preview-ts_train_0_.jsonl  ts-pg-openai__gpt-5_4-mini-ts_train_0_.jsonl  ts-pg-openai__gpt-5_4-nano-ts_train_0_.jsonl  ts-pg-openai__gpt-5_4-ts_train_0_.jsonl  ts-pg-qwen__qwen3-coder-plus-ts_train_0_.jsonl
experiments/mcp-exps/reports/: basic-fs-deepseek-v-3-2_test_0.jsonl  basic-fs-gpt-5-4-mini_test_0.jsonl  basic-fs-gpt-5-4-nano_test_0.jsonl  basic-fs-gpt-5-4-true_test_0.jsonl  basic-fs-haiku-v2_test_0.jsonl  basic-fs-opus-4-6_true_test_0.jsonl  basic-fs-qwen3-coder-plus-v2_test_0.jsonl  basic-fs-redo-deepseekv32_test_0_019de816.jsonl  basic-fs-redo-gpt54_test_0_019de836.jsonl  basic-fs-redo-gpt54mini_test_0_019de83a.jsonl  basic-fs-redo-gpt54nano_test_0_019de83c.jsonl  basic-fs-redo-haiku45_test_0_019de808.jsonl  basic-fs-redo-opus46_test_0_019de430.jsonl  basic-fs-redo-qwen3coder_test_0_019de810.jsonl  cv-gpt54-mini-aggregated.jsonl  cv-readme-deepseek-v3-2.jsonl  cv-readme-gpt-5-4-nano.jsonl  cv-readme-gpt-5-4.jsonl  cv-readme-haiku-4-5.jsonl  cv-readme-opus-4-6.jsonl  cv-readme-qwen3-coder-plus.jsonl  ts-fs-repro-deepseekv32-openaismall_test_0.jsonl  ts-fs-repro-gpt54-openaismall_test_0.jsonl  ts-fs-repro-gpt54mini-openaismall-v4_test_0.jsonl  ts-fs-repro-gpt54nano-openaismall_test_0.jsonl  ts-fs-repro-haiku45-openaismall_test_0.jsonl  ts-fs-repro-oos-deepseekv32-openaismall-v2_test_0.jsonl  ts-fs-repro-oos-gpt54-mini-openaismall_test_0.jsonl  ts-fs-repro-oos-gpt54-nano-openaismall_test_0.jsonl  ts-fs-repro-oos-gpt54-openaismall_test_0.jsonl  ts-fs-repro-oos-haiku45-openaismall_test_0.jsonl  ts-fs-repro-oos-opus46-openaismall_test_0.jsonl  ts-fs-repro-oos-qwen3coderplus-openaismall_test_0.jsonl  ts-fs-repro-opus46-openaismall_test_0.jsonl  ts-fs-repro-qwen3coderplus-openaismall_test_0.jsonl  ts-fs-repro-redo-oos-accum-cv-gpt54_test_0_019de887.jsonl  ts-fs-repro-redo-oos-accum-cv-gpt54mini_test_0_019de88f.jsonl  ts-fs-repro-redo-oos-accum-cv-gpt54nano_test_0_019de894.jsonl  ts-fs-repro-redo-oos-accum-cv-haiku45_test_0_019de873.jsonl  ts-fs-repro-redo-oos-accum-cv-qwen3coderplus_test_0_019de85d.jsonl  (+9 more)
experiments/mcp-exps/results/: offline-fs-redo-all.jsonl  offline-fs-redo-all_qwen30k.jsonl  offline-fs-redo-all_qwen4096.jsonl  offline-fs-redo-all_qwen4096prompted.jsonl
experiments/mcp-exps/scripts/: aggregate_cv_readme_reports.sh  regenerate_reports.sh
experiments/mcp-exps/src/: __init__.py  logfire_genai.py
experiments/mcp-exps/src/agents/: __init__.py  _basic.py  _tool_suggest.py  worker_capabilities.py
experiments/mcp-exps/src/history_processors/: __init__.py  _truncate_tool_returns.py
experiments/mcp-exps/src/offline_eval/: __init__.py  loading.py  metrics.py  ranking.py  runner.py  splits.py
experiments/mcp-exps/src/report/: __init__.py  (+9 more)
experiments/mcp-exps/tool_suggest_repos/: phase_4031396d.json
experiments/multilabel-goemotions/: .gitignore  DESIGN.md  PLAN.md  REPORT.md  analyze_imbalance.py  diag_ft.py  diag_ft_warmup.py  plot_curve.py  plot_ft.py  prepare_data.py  pyproject.toml  run.bash  run.py  run_finetune.py  sweep.py
experiments/multilabel-goemotions/src/: __init__.py  data.py  naming.py  pipeline.py  sweep.py
(+214 files in other folders)
