[project]
name = "AutoIntent-experiments"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "voorhs", email = "ilya_alekseev_2016@list.ru"},
]
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "wandb>=0.19.9",
    "pandas>=2.2.3",
    "autointent[codecarbon] @ git+ssh://git@github.com/DeepPavlov/AutoIntent.git@6a22bdc",
    "sentencepiece>=0.2.0",
    "xformers>=0.0.30",
    "torchvision>=0.22.0"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
fedot = [
    "fedot>=0.7.5",
]
h2o = [
    "h2o>=3.46.0.7",
]
lama = [
    "lightautoml[nlp]>=0.4.1",
]
gluon = [
    "autogluon>=1.3.0",
]
[tool.pdm]
distribution = false
