[project]
name = "mcp-exps"
version = "0.1.0"
description = "Experiments on running MCP benchmarks with autointent-based tool-suggester"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "tool_suggest[local] @ git+ssh://git@github.com/DeepPavlov/tool-suggest.git@5c74630019292a18c49930ef8b4c4886d005be55",
    "mcp_evals[domain-filesystem] @ git+ssh://git@github.com/DeepPavlov/mcp-evals.git@4de9a1054000314e88c36b0c781a542199731824",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1,<1.20.0",
    "ruff>=0.15.0,<0.15.1",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",     # trailing commas
    "ERA001",     # commented code
    "FBT",        # boolean trap
    "D105",       # docstring in magic methods
    "EM101",      # string literal in exception
    "TRY003",     # strings in exceptions
    "FIX", "TD"   # todos
]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.pydocstyle]
convention = "google"